native/nexa_http_native_core/include/nexa_http_native.h

typedef struct NexaHttpHeaderEntry {
  const char* name_ptr;
  uintptr_t name_len;
  const char* value_ptr;
  uintptr_t value_len;
} NexaHttpHeaderEntry;
typedef struct NexaHttpClientConfigArgs {
  const NexaHttpHeaderEntry* default_headers_ptr;
  uintptr_t default_headers_len;
  const char* user_agent_ptr;
  uintptr_t user_agent_len;
  uint64_t timeout_ms;
  uint8_t has_timeout;
} NexaHttpClientConfigArgs;
typedef struct NexaHttpRequestArgs {
  const char* method_ptr;
  uintptr_t method_len;
  const char* url_ptr;
  uintptr_t url_len;
  const NexaHttpHeaderEntry* headers_ptr;
  uintptr_t headers_len;
  uint8_t* body_ptr;
  uintptr_t body_len;
  uint8_t body_owned;
  uint64_t timeout_ms;
  uint8_t has_timeout;
} NexaHttpRequestArgs;
typedef struct NexaHttpBinaryResult {
  uint8_t is_success;
  uint16_t status_code;
  NexaHttpHeaderEntry* headers_ptr;
  uintptr_t headers_len;
  char* final_url_ptr;
  uintptr_t final_url_len;
  uint8_t* body_ptr;
  uintptr_t body_len;
  void* body_owner;
  char* error_json;
} NexaHttpBinaryResult;
typedef void (*NexaHttpExecuteCallback)(uint64_t request_id, NexaHttpBinaryResult* result);